@@ -17,20 +17,23 @@ namespace Celeste.Mod.XaphanHelper.Triggers
         public override void OnEnter(Player player)
         {
             base.OnEnter(player);
-            string Prefix = SceneAs<Level>().Session.Area.LevelSet;
-            int chapterIndex = SceneAs<Level>().Session.Area.ChapterIndex == -1 ? 0 : SceneAs<Level>().Session.Area.ChapterIndex;
-            string[] rooms = Rooms.Split(',');
-            foreach (string room in rooms)
+            if (string.IsNullOrEmpty(XaphanModule.ModSaveData.DestinationRoom) && XaphanModule.ModSaveData.LoadedPlayer)
             {
-                if (!XaphanModule.ModSaveData.ExtraUnexploredRooms.Contains(Prefix + "/Ch" + chapterIndex + "/" + room))
+                string Prefix = SceneAs<Level>().Session.Area.LevelSet;
+                int chapterIndex = SceneAs<Level>().Session.Area.ChapterIndex == -1 ? 0 : SceneAs<Level>().Session.Area.ChapterIndex;
+                string[] rooms = Rooms.Split(',');
+                foreach (string room in rooms)
                 {
-                    XaphanModule.ModSaveData.ExtraUnexploredRooms.Add(Prefix + "/Ch" + chapterIndex + "/" + room);
+                    if (!XaphanModule.ModSaveData.ExtraUnexploredRooms.Contains(Prefix + "/Ch" + chapterIndex + "/" + room))
+                    {
+                        XaphanModule.ModSaveData.ExtraUnexploredRooms.Add(Prefix + "/Ch" + chapterIndex + "/" + room);
+                    }
                 }
-            }
-            MapDisplay mapDisplay = SceneAs<Level>().Tracker.GetEntity<MapDisplay>();
-            if (mapDisplay != null && mapDisplay.ExtraUnexploredRooms.Count > mapDisplay.ExtraUnexploredRoomsCount)
-            {
-                mapDisplay.UpdateExtraRooms();
+                MapDisplay mapDisplay = SceneAs<Level>().Tracker.GetEntity<MapDisplay>();
+                if (mapDisplay != null && mapDisplay.ExtraUnexploredRooms.Count > mapDisplay.ExtraUnexploredRoomsCount)
+                {
+                    mapDisplay.UpdateExtraRooms();
+                }
             }
         }
     }
